# yeet

./: CMakeLists.txt  SampleServer.cpp  SampleServer.h  i686-sysroot.cmake  index.html  script.js  server.crt  styles.css
entwurf/: README.txt
scripts/: colors.js  login.js  message-input.js  state.js
simple-web-server/: server_http.hpp  server_https.hpp
webroot/: index.html  script.js  styles.css
webroot/scripts/: colors.js  login.js  message-input.js  output.js
webserver/: server.key
website/: auslagernwebapp.css  index.html
